--- a/templates/index.html
+++ b/templates/index.html
@@ -76,8 +76,9 @@
         {% endif %}
     </ul>
 
-    <form action="/logout" method="get">
+    <form action="{{ url_for('logout') }}" method="post">
         <button type="submit">Logout</button>
     </form>
+
 </body>
 </html>
