--- a/templates/index.html
+++ b/templates/index.html
@@ -80,10 +80,7 @@
 <a href="{{ url_for('logout') }}"><button type="button">Logout</button></a>
 
 <!-- OR using a form (POST request) -->
-<form action="{{ url_for('logout') }}" method="post">
-    <button type="submit">Logout</button>
-</form>
-
+<a href="{{ url_for('logout') }}"><button type="button">Logout</button></a>
 
 </body>
 </html>
