--- a/templates/index.html
+++ b/templates/index.html
@@ -176,9 +176,7 @@ em {
     <!-- Button to play top tracks -->
     <!-- Buttons to control playback -->
     <div>
-        <a href="{{ url_for('previous_track') }}"><button>Previous Track</button></a>
-        <a href="/play_top_tracks" id="shii"><button>Play Top Tracks</button></a>
-        <a href="{{ url_for('next_track') }}"><button>Next Track</button></a>
+        <a href="{{ url_for('previous_track') }}"><button>Previous Track</button></a> <a href="/play_top_tracks" id="shii"><button>Play Top Tracks</button></a> <a href="{{ url_for('next_track') }}"><button>Next Track</button></a>
     </div>
 
     <!-- Display Top Tracks -->
